fix img align

--- a/projetofinal/src/main/resources/static/css/registro.css
+++ b/projetofinal/src/main/resources/static/css/registro.css
@@ -162,4 +162,6 @@ a {
 
 .imageSize {
     width: 70px;
+    display: block;
+    margin: auto;
 }
